# libera_cam

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/setup-env/: action.yml
.github/instructions/: libera_cam.instructions.md
.github/workflows/: _run-tests.yml  daily-tests.yml
doc/: changelog.md
github_cam/: README.rst  cam-env.yml  setup.py
github_cam/cam/: __init__.py  camera.py  common.py
github_cam/cam/cal/: __init__.py  dark.py  flfd.py  nlin.py  rad.py
github_cam/cam/corr/: __init__.py  dark.py  flfd.py  nlin.py  rad.py  util.py
github_cam/cam/mask/: __init__.py  adm.py  dark.py  img.py  limb.py
github_cam/cam/util/: geo.py  util.py
github_cam/examples/: 01_norm_mode.py  02_raps_mode.py  03_dark_mode.py  04_led_mode.py  demo.py
jenkins_scripts/: JenkinsFile-PRTester  JenkinsFile-UnitTester
libera_cam/: camera.py  cli.py  constants.py  geolocation.py  l1b.py  packaging.py  version.py
libera_cam/calibration_creation/: dark_calibration.py  flat_fielding_calibration.py  non_linearity_calibration.py  radiometric_calibration.py  viirs_calibrations.py
libera_cam/correction_tools/: __init__.py  dark_corrections.py  flat_field_corrections.py  non_linearity_corrections.py  radiometric_corrections.py  viirs_corrections.py
libera_cam/data/: L1B_CAM_product_definition.yml  camera_calibration_data.h5
libera_cam/data/ground_calibration/: scaling_factor.csv  wfov_pixel_vectors.npy
libera_cam/image_parsing/: l1a_parser.py  metadata_parser.py  read_l1a_cam_data.py
libera_cam/plotting_tools/: calibration_plotting.py  normal_operations.py  plotting_utils.py
libera_cam/simulation_tools/: reverse_non_linearity.py
libera_cam/utils/: ccsds_io.py  hdf5_io.py  masks.py  metadata_parser.py
tests/: conftest.py  make_l1a_data.py  profile_l1b.py
tests/integration/: test_geolocation.py  test_l1b.py  test_read_l1a_cam_data.py
tests/test_data/: camera_raw_count_example.h5  libera_cam_l1b_descriptor_20220909t000000_20220910t000000.h5  libera_cam_l1b_descriptor_20221010t000000_20221011t000000.h5  libera_input_manifest_20221012t172959.json  libera_rad_l1b_descriptor_20220909t000000_20220910t000000.h5  libera_rad_l1b_descriptor_20221010t000000_20221011t000000.h5  testing_calibration_data.h5  viirs_known_result.h5
tests/test_data/DITL_short/: LIBERA_L1A_WFOV-SCI-DECODED_V5-4-2_20280215T135304_20280215T142141_R26021133743.nc  LIBERA_SPICE_AZROT-CK_V5-5-1_20280215T135304_20280215T142141_R26021234221.bc  LIBERA_SPICE_JPSS-CK_V5-4-2_20280215T000000_20280215T220000_R26006200700.bc  LIBERA_SPICE_JPSS-SPK_V5-4-2_20280215T000000_20280215T220000_R26006200656.bsp
tests/unit/: test_camera.py  test_cli.py  test_geolocation_logic.py  test_l1b.py
tests/unit/test_calibration_creation/: test_dark_calibration.py  test_flat_fielding_calibration.py  test_non_linearity_calibration.py  test_radiometric_calibration.py  test_viirs_calibration.py
tests/unit/test_correction_tools/: test_dark_corrections.py  test_flat_fielding_corrections.py  test_nonlinearity_correction.py  test_radiometric_corrections.py  test_viirs_corrections.py
tests/unit/test_image_parsing/: test_l1a_parser.py  test_read_l1a_cam_data.py
tests/unit/test_plotting/: test_calibration_plotting.py  test_normal_operation_plotting.py
