[tool.poetry]
name = "libera_cam"
version = "0.1.0"
description = "Libera wide field of view camera L1b algorithm"
authors = [
    "Stéphane Béland <stephane.beland@lasp.colorado.edu>",
    "Gavin Medley <gavin.medley@lasp.colorado.edu>",
    "Laura Sandoval <laura.sandoval@lasp.colorado.edu>",
    "Matt Watwood <matt.watwood@lasp.colorado.edu>"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"
pytest-coverage = "^0.0"
pylint = "^2.14.2"
bandit = "^1.7.4"

[tool.poetry.scripts]
libera-cam = 'libera_cam.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
