[project]
name = "libera_cam"
version = "0.2.0"
description = "Libera wide field of view camera L1b algorithm"
authors = [  # Alphabetical
    { name = "Caleb Kumar", email =  "caleb.kumar@colorado.edu" },
    { name = "Gavin Medley", email = "gavin.medley@lasp.colorado.edu" },
    { name = "Hong Chen", email = "hong.chen@lasp.colorado.edu"},
    { name = "Laura Sandoval", email = "laura.sandoval@lasp.colorado.edu" },
    { name = "Matt Watwood", email = "matt.watwood@lasp.colorado.edu" },
    { name = "Sebastian Schmidt", email = "sebastian.schmidt@lasp.colorado.edu"}
]
maintainers = [
    { name = "Matt Watwood", email = "matt.watwood@lasp.colorado.edu" }
]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.11,<4"
keywords = [
    "libera",
    "wfov camera",
    "earth science",
    "radiation budget",
    "remote sensing",
    "lasp",
    "university of colorado"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GPLv3 License"
]
# These are the dependencies used in the package metadata when building the project
dependencies = [
    "cloudpathlib[s3]>=0.14.0,<1.0",
    "libera_utils>=2.1.1",
    "xarray>=2024.1.1",
    "pyyaml>=6.0.2,<7",
]

[tool.poetry.scripts]
libera-cam = 'libera_cam.cli:main'

[tool.poetry]
packages = [
    { include = "libera_cam" }
]
include = [
    "LICENSE.txt",
    "README.md"
]

[tool.poetry.group.dev.dependencies]
# These specs are totally open because they are only needed for developers
bandit = "*"
pre-commit = "*"
pytest-cov = "*"
pytest-randomly = "*"
pytest-subprocess = "*"
ruff = "*"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test. Skip these tests with `pytest -m 'not integration' tests`"
]
addopts = [
    "-s"  # Don't capture output (print it)
]
minversion = 6.0
xfail_strict = true

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-include = [
    "libera_cam/**/*.py",
    "tests/**/*.py"
]
extend-exclude = [
    "tests/test_data/**",
    "libera_cam/data/**"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort import sorting
    "S",  # flake8-bandit security
    "PT",  # flake8-pytest-style
    "UP"  # pyupgrade syntax upgrader
]
per-file-ignores = { "tests/*" = ["S"] }

